--- a/package.json
+++ b/package.json
@@ -2,30 +2,6 @@
   "name": "ib-liberia-digital",
   "version": "0.1.0",
   "private": true,
-  "rocketCritical": {
-    "dependencies": [
-      "@dhiwise/component-tagger",
-      "react",
-      "react-dom",
-      "@reduxjs/toolkit",
-      "redux",
-      "react-router-dom"
-    ],
-    "devDependencies": [
-      "@vitejs/plugin-react",
-      "vite",
-      "vite-tsconfig-paths",
-      "tailwindcss",
-      "autoprefixer",
-      "postcss"
-    ],
-    "scripts": [
-      "start",
-      "build",
-      "serve"
-    ],
-    "warning": "🚨 CRITICAL: DO NOT REMOVE OR MODIFY ABOVE DEPENDENCIES - Required for app functionality"
-  },
   "dependencies": {
     "@dhiwise/component-tagger": "^1.0.10",
     "@radix-ui/react-slot": "^1.2.3",
@@ -87,7 +63,7 @@
     "autoprefixer": "10.4.2",
     "postcss": "8.4.8",
     "tailwindcss": "3.4.6",
-    "vite": "5.0.0",
+    "vite": "^5.0.0",
     "vite-tsconfig-paths": "3.6.0"
   }
 }
